--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Assignment Project</title>
+	<title>Basic html</title>
 </head>
 <body>
-	<header><h1>Colleen van Lent </h1></header>
+	<header><h1>Basic html</h1></header>
 	<nav>
 		<a href="">One</a>
 		<a href="">Two</a>
 		<a href="">Three</a>
 	</nav>
-	<h2>Favorite Foods</h2>
+	<h2>Soem Tags</h2>
 	<ul>
-		<li>Apples</li>
-		<li>Pizza</li>
-		<li>Crab</li>
-		<li>Chocolate Cake</li>
+		<li>heading tag</li>
+		<li>paragraph tag</li>
+		<li>image tag</li>
+		<li>table tag</li>
 	</ul>
 	<h2>Achievements</h2>
 	<label for="first">Progress in this course (100%)</label>
